# CMOS

./: .gitignore  LOGO.3mf
FREECAD/: Droite facade.20251016-215653.FCBak  Droite facade.FCStd  Droite facade.stl  Gauche facade.20251012-224256.FCBak  Gauche facade.FCStd  LOGO.20260212-222605.FCBak  LOGO.20260213-200954.FCBak  LOGO.20260215-210702.FCBak  LOGO.20260215-211526.FCBak  LOGO.20260222-204210.FCBak  LOGO.3mf  LOGO.FCStd  LOGO.stl  LOGO1.20260222-210844.FCBak  LOGO1.FCStd  LOGO1.stl  Nouveau.FCStd  gauche ecran.3mf  gauche ecran.stl
FREECAD/orizon/: README.txt
KICAD/CPU_ESP/V0.1/CPU/: CPU-B_Cu.gbl  CPU-B_Mask.gbs  CPU-B_Paste.gbp  CPU-B_Silkscreen.gbo  CPU-Edge_Cuts.gm1  CPU-F_Cu.gtl  CPU-F_Mask.gts  CPU-F_Paste.gtp  CPU-F_Silkscreen.gto  CPU-NPTH-drl.gbr  CPU-NPTH-drl_map.gbr  CPU-NPTH.drl  CPU-PTH-drl.gbr  CPU-PTH-drl_map.gbr  CPU-PTH.drl  CPU.kicad_pcb  CPU.kicad_prl  CPU.kicad_pro  CPU.kicad_sch  ESP32.kicad_sch  ESP32.kicad_sch-bak  I2C.kicad_sch  Power.kicad_sch  cmos_bus.kicad_sch  sevensegments.kicad_sch
KICAD/CPU_ESP/V0.2/CPU/: CPU-B_Cu.gbr  (+13 more)
KICAD/LIBRAIRIE/: CMOS-LIBRAIRIE.bak  CMOS-LIBRAIRIE.kicad_sym
VSCODE/CMOS74/: sdkconfig  sdkconfig.old
VSCODE/CMOS74-A/: CMakeLists.txt  sdkconfig.old
VSCODE/CMOS74/components/cpuLed/: CMakeLists.txt  cpuLed.c  cpuLedDevice.c  cpuLedDeviceInterface.c  cpuLedInterface.c
VSCODE/CMOS74/components/cpuLed/include/: cpuLed.h  cpuLedDevice.h  cpuLedDeviceInterface.h  cpuLedDeviceList.h  cpuLedInterface.h  cpucLedDeviceInterface.h
VSCODE/CMOS74/main/: CMOS74_main.c  CMakeLists.txt  Kconfig.projbuild
(+67 files in other folders)
